fix recent transactions frame too narrow

--- a/src/components/SettingsScreen/SettingsTabs.css
+++ b/src/components/SettingsScreen/SettingsTabs.css
@@ -2,7 +2,7 @@
   border-bottom: solid 1px #ebeef2;
   position: relative;
   overflow: hidden;
-  --tab-widht: 90px;
+  --tab-widht: 100px;
 }
 
 .recent-transactions-tab-button {
