--- a/src/components/TransactionsScreen/RecentTransactionsTabs.css
+++ b/src/components/TransactionsScreen/RecentTransactionsTabs.css
@@ -2,7 +2,7 @@
   border-bottom: solid 1px #ebeef2;
   position: relative;
   overflow: hidden;
-  --tab-widht: 100px;
+  --tab-widht: 1100px;
 }
 
 .recent-transactions-tab-button {
